--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   </head>
   <body>
     <h1>heading</h1>
+    <img src="https://avatars.githubusercontent.com/u/86478254?v=4">
 Hello there, awesome person!
     
   </body>
